--- a/index.html
+++ b/index.html
@@ -19,6 +19,11 @@
 </head>
 <body>
     <page size="A4">
+        <div class="container">
+            <div class="col-1">1</div>
+            <div class="col-2">2</div>
+            <div class="col-3">3</div>
+        </div>
     </page>
 </body>
 </html>
