defined columns and rows, placed text

--- a/index.html
+++ b/index.html
@@ -5,24 +5,88 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>My Resume</title>
     <meta name="description" content="My official resume.">
-    <meta name="author" content="Dennis">
+    <meta name="author" content="Dennis Kiplang'at Ng'etich">
     <meta property="og:title" content="My Resume">
     <meta property="og:type" content="website">
     <meta property="og:url" content="#">
     <meta property="og:description" content="My official resume.">
     <meta property="og:image" content="my_image.png">
-    <!-- <link rel="icon" href="/favicon.ico"> -->
-    <link rel="icon" href="/my_favicon.svg" type="image/svg+xml">
-    <link rel="apple-touch-icon" href="/apple-touch-icon.png">
     <link rel="stylesheet" href="css/styles.css?v=1.0">
-    
+    <!-- FavIcon Config -->
+    <link rel="apple-touch-icon" sizes="180x180" href="images/favicon/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="images/favicon/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="images/favicon/favicon-16x16.png">
+    <link rel="manifest" href="site.webmanifest">
+    <!-- <Raleway font></Raleway> -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Raleway:wght@300;600;800&display=swap" rel="stylesheet">
 </head>
 <body>
     <page size="A4">
         <div class="container">
-            <div class="col-1">1</div>
-            <div class="col-2">2</div>
-            <div class="col-3">3</div>
+            <div class="col-1">
+                <div class="row-1">
+                    <div id="name-large"><b>Dennis Kiplangat</b></div>
+                    <br><div id="role"><b>Software Developer</b></div>
+                </div>
+                <div class="row-2">
+                    <hr class="short-lines">
+                    <b>Profile Summary</b>
+                </div>
+                <div class="row-3">
+                    <hr class="short-lines">
+                    <b>Skills</b>
+                </div>
+                <div class="row-4">
+                    <hr class="short-lines">
+                    <b>Experience</b>
+                </div>
+                <div class="row-5">
+                    <hr class="short-lines">
+                    <b>Education</b>
+                </div>
+                <div class="row-6">
+                    <hr class="short-lines">
+                    <b>Links</b>
+                </div>
+            </div>
+            <div class="col-2"></div>
+            <div class="col-3">
+                <div class="row-1">
+                    <hr>
+                    <b>Dennis Kiplangat</b>
+                    <div id="address">
+                        <br>Baringo Road
+                        <br>Kahawa Sukari, Nairobi
+                    </div>
+                    <div id="phonenumber"><br>+254733289935</div>
+                    <br>denniskiplangat.dk@gmail.com
+                </div>
+                <div class="row-2">
+                    <hr>
+                    I am a young developer from a humble background in Kitale who is hoping to make it big in the city of Nairobi. I am hungry for new challenges and am ready to take on a junior position for a start.
+                </div>
+                <div class="row-3">
+                    <hr>
+                    Apache Server, GIT & Github, Unix, Bash, C, Java, PHP, Python, Javascript, ES6, TypeScript, VueJS, React & Redux, Laravel, CSS3, Sass, HTML5 etc.
+                </div>
+                <div class="row-4">
+                    <hr>
+                    @ILAB Africa / Software Developer Sept- 2019 - March-2020, Nairobi
+                    I worked at Strathmore-@iLabAfrica for a period of 7 months. I was interning at the E-Health Department. I would like to proudly state that it was a pleasure working because I enjoyed every day of work. I was a Junior Software Developer part of the team assigned to develop the Hospital Management Information System (HMIS). I worked on two module features of the system using Laravel and VueJs. I also played a role in the development of a crash-project dubbed ‘Kitui Goat Auction System’ sponsored by the Communications Authority of Kenya (CAK).
+                </div>
+                <div class="row-5">
+                    <hr>
+                    Kenyatta University / BSC. Math & Computer Science Sept- 2013 - Dec 2017, Nairobi
+Studied Mathematics and Computer Science majoring in Statistics.
+                </div>
+                <div class="row-6">
+                    <hr>
+                    Github: https://github.com/Dennis7456
+StackOverFlow: https://stackoverflow.com/users/8122484/dennis7456
+                </div>
+                </div>
         </div>
     </page>
 </body>
