My resume is now complete

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
-<!doctype html>
-<html lang="en">
-<head>
-    <meta charset="utf-8">
+<!DOCTYPE html>
+	<html lang="en">
+	<head>
+		<meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>My Resume</title>
     <meta name="description" content="My official resume.">
@@ -11,6 +11,7 @@
     <meta property="og:url" content="#">
     <meta property="og:description" content="My official resume.">
     <meta property="og:image" content="my_image.png">
+    <!-- style sheet -->
     <link rel="stylesheet" href="css/styles.css?v=1.0">
     <!-- FavIcon Config -->
     <link rel="apple-touch-icon" sizes="180x180" href="images/favicon/apple-touch-icon.png">
@@ -21,73 +22,72 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@300;600;800&display=swap" rel="stylesheet">
-</head>
-<body>
-    <page size="A4">
-        <div class="container">
-            <div class="col-1">
-                <div class="row-1">
-                    <div id="name-large"><b>Dennis Kiplangat</b></div>
-                    <br><div id="role"><b>Software Developer</b></div>
-                </div>
-                <div class="row-2">
-                    <hr class="short-lines">
-                    <b>Profile Summary</b>
-                </div>
-                <div class="row-3">
-                    <hr class="short-lines">
-                    <b>Skills</b>
-                </div>
-                <div class="row-4">
-                    <hr class="short-lines">
-                    <b>Experience</b>
-                </div>
-                <div class="row-5">
-                    <hr class="short-lines">
-                    <b>Education</b>
-                </div>
-                <div class="row-6">
-                    <hr class="short-lines">
-                    <b>Links</b>
-                </div>
-            </div>
-            <div class="col-2"></div>
-            <div class="col-3">
-                <div class="row-1">
-                    <hr>
-                    <b>Dennis Kiplangat</b>
-                    <div id="address">
-                        <br>Baringo Road
-                        <br>Kahawa Sukari, Nairobi
-                    </div>
-                    <div id="phonenumber"><br>+254733289935</div>
-                    <br>denniskiplangat.dk@gmail.com
-                </div>
-                <div class="row-2">
-                    <hr>
-                    I am a young developer from a humble background in Kitale who is hoping to make it big in the city of Nairobi. I am hungry for new challenges and am ready to take on a junior position for a start.
-                </div>
-                <div class="row-3">
-                    <hr>
-                    Apache Server, GIT & Github, Unix, Bash, C, Java, PHP, Python, Javascript, ES6, TypeScript, VueJS, React & Redux, Laravel, CSS3, Sass, HTML5 etc.
-                </div>
-                <div class="row-4">
-                    <hr>
-                    @ILAB Africa / Software Developer Sept- 2019 - March-2020, Nairobi
+	</head>
+	<body>
+		<div class="page">
+			<div class="container">
+				<div class="col-1">
+					<div class="row-1">
+						<div id="name-large"><b>Dennis Kiplang'at</b></div>
+						<br><div id="role"><b>Software Developer</b></div>
+					</div>
+					<div class="row-2" id="title">
+						<hr class="short-line">
+						<b>Profile Summary</b>
+					</div>
+					<div class="row-3" id="title">
+						<hr class="short-line">
+						<b>Skills</b>
+					</div>
+					<div class="row-4" id="title">
+						<hr class="short-line">
+						<b>Experience</b>
+					</div>
+					<div class="row-5" id="title">
+						<hr class="short-line" id="line-5">
+						<b>Education</b>
+					</div>
+					<div class="row-6" id="title">
+						<hr class="short-line">
+						<b>Links</b>
+					</div>
+				</div>
+				<div class="col-2">
+					<div class="row-1">
+						<hr>
+						<b>Dennis Kiplang'at</b>
+						<div id="address">
+							<br>Baringo Road
+							<br>Kahawa Sukari, Nairobi.
+						</div>
+						<div id="phonenumber"><br>+254733289935</div>
+						<div id="email"><br><a href = "mailto: denniskiplangat.dk@gmail.com">denniskiplangat.dk@gmail.com</a></div>
+					</div>
+					<div class="row-2" id="description">
+						<hr>
+						I am a young developer from a humble background in Kitale who is hoping to make it big in the city of Nairobi. I am hungry for new challenges and am ready to take on a junior position for a start.
+					</div>
+					<div class="row-3" id="description">
+						<hr>
+						Apache Server, GIT & Github, Unix, Bash, C, Java, PHP, Python, Javascript, ES6, TypeScript, VueJS, React & Redux, Laravel, CSS3, Sass, HTML5 etc.
+					</div>
+					<div class="row-4" id="description">
+						<hr>
+						@ILAB Africa / Software Developer Sept- 2019 - March-2020, Nairobi
                     I worked at Strathmore-@iLabAfrica for a period of 7 months. I was interning at the E-Health Department. I would like to proudly state that it was a pleasure working because I enjoyed every day of work. I was a Junior Software Developer part of the team assigned to develop the Hospital Management Information System (HMIS). I worked on two module features of the system using Laravel and VueJs. I also played a role in the development of a crash-project dubbed ‘Kitui Goat Auction System’ sponsored by the Communications Authority of Kenya (CAK).
-                </div>
-                <div class="row-5">
-                    <hr>
-                    Kenyatta University / BSC. Math & Computer Science Sept- 2013 - Dec 2017, Nairobi
+					</div>
+					<div class="row-5" id="description">
+						<hr id="line-5">
+						Kenyatta University / BSC. Math & Computer Science Sept- 2013 - Dec 2017, Nairobi
 Studied Mathematics and Computer Science majoring in Statistics.
-                </div>
-                <div class="row-6">
-                    <hr>
-                    Github: https://github.com/Dennis7456
-StackOverFlow: https://stackoverflow.com/users/8122484/dennis7456
-                </div>
-                </div>
-        </div>
-    </page>
-</body>
-</html>
+					</div>
+					<div class="row-6" id="description">
+						<hr>
+						Github: <a href="https://github.com/Dennis7456">https://github.com/Dennis7456</a>
+						<br>StackOverFlow: <a href="https://stackoverflow.com/users/8122484/dennis7456">https://stackoverflow.com/users/8122484/dennis7456</a>
+					</div>
+				</div>
+			</div>
+		</div>
+	</body>
+	</html>
