small changes:added projects link

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 		<meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>My Resume</title>
-    <meta name="description" content="My official resume.">
+    <meta name="description" content="A web version of my official resume.">
     <meta name="author" content="Dennis Kiplang'at Ng'etich">
     <meta property="og:title" content="My Resume">
     <meta property="og:type" content="website">
@@ -85,6 +85,7 @@ Studied Mathematics and Computer Science majoring in Statistics.
 						<hr>
 						Github: <a href="https://github.com/Dennis7456">https://github.com/Dennis7456</a>
 						<br>StackOverFlow: <a href="https://stackoverflow.com/users/8122484/dennis7456">https://stackoverflow.com/users/8122484/dennis7456</a>
+                        <div><br><b>Checkout My Projects: <a href="coming.soon">coming.soon</a></b></div>
 					</div>
 				</div>
 			</div>
