--- a/index.html
+++ b/index.html
@@ -83,6 +83,7 @@ Studied Mathematics and Computer Science majoring in Statistics.
 					</div>
 					<div class="row-6" id="description">
 						<hr>
+						I did this <a href="https://github.com/Dennis7456/myresume">resume.</a>
 						Github: <a href="https://github.com/Dennis7456">https://github.com/Dennis7456</a>
 						<br>StackOverFlow: <a href="https://stackoverflow.com/users/8122484/dennis7456">https://stackoverflow.com/users/8122484/dennis7456</a>
                         <div><br><b>Checkout My Projects: <a href="coming.soon">coming.soon</a></b></div>
