--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 	<html lang="en">
 	<head>
-		<meta charset="utf-8">
+	<meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>My Resume</title>
     <meta name="description" content="A web version of my official resume.">
@@ -25,7 +25,8 @@
 <!-- responsive web design rule -->
 <!-- <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0" /> -->
 	</head>
-	<body>
+	<body onload="respond()">
+		<div class = "responsive">
 		<div class="page">
 			<div class="container">
 				<div class="col-1">
@@ -89,9 +90,12 @@ Studied Mathematics and Computer Science majoring in Statistics.
 						Github: <a href="https://github.com/Dennis7456">https://github.com/Dennis7456</a>
 						<br>StackOverFlow: <a href="https://stackoverflow.com/users/8122484/dennis7456">https://stackoverflow.com/users/8122484/dennis7456</a>
                         <div><br><b>Checkout My Projects: <a href="coming.soon">coming.soon</a></b></div>
+						<div><br><b>Test: <a href="page.html">coming.soon</a></b></div>
 					</div>
 				</div>
 			</div>
 		</div>
+	</div>
 	</body>
+	<script src="script.js"></script>
 	</html>
