added my projects

--- a/index.html
+++ b/index.html
@@ -88,7 +88,13 @@ Studied Mathematics and Computer Science majoring in Statistics.
 						I did this <a href="https://github.com/Dennis7456/myresume">resume.</a>
 						Github: <a href="https://github.com/Dennis7456">https://github.com/Dennis7456</a>
 						<br>StackOverFlow: <a href="https://stackoverflow.com/users/8122484/dennis7456">https://stackoverflow.com/users/8122484/dennis7456</a>
-                        <div><br><b>Checkout My Projects: <a href="coming.soon">coming.soon</a></b></div>
+                        <div><br><b>Checkout My Projects:</b></div>
+                        <div>
+                        	<ul>
+                        		<li><a href="https://day-of2021.web.app/">Flask + Firebase with Google Cloud Run</a></li>
+                        		<li>Deal duka project pending hosting (link will be provided soon, meanwhile you can check out my <b><a href="https://www.dropbox.com/s/mlpw2et0tk4sszo/logo-photoshop.png?dl=0">logo</a></b> and comment your thoughts.)</li>
+                        	</ul>
+                        </div>
 					</div>
 				</div>
 			</div>
