--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 					</div>
 					<div class="row-2" id="description">
 						<hr>
-						I am a young developer from a humble background in Kitale who is hoping to make it big in the city of Nairobi. I am hungry for new challenges and am ready to take on a junior position for a start.
+						I am a Software Engineer, a technology enthusiast, a problem solver, and an innovative designer. I hold a bachelor's degree in Mathematics and Computer science majoring in statistics. I am currently self-employed with a keen interest in new challenges that the job market might offer. I am available for software developer, software engineer, or web developer roles. 
 					</div>
 					<div class="row-3" id="description">
 						<hr>
